used j9-10-11 features and cleaned code